<resources>
    <string name="app_name">ITCM</string>

    <!--Login/Register Activities-->
    <string name="str_logo_title">NTU  -  iTCM</string>
    <string name="str_sign_up_cap">SIGN UP</string>
    <string name="str_login_cap">LOGIN</string>
    <string name="str_dashboard">Dashboard</string>
    <string name="str_preference">Preference</string>
    <string name="str_reward">Reward</string>
    <string name="str_me">Me</string>
    <string name="str_email_hint">Email</string>
    <string name="str_password_hint">Password</string>
    <string name="str_confirm_password_hint">Confirm Password</string>
    <string name="str_firstname_hint">First Name</string>
    <string name="str_lastname_hint">Last Name</string>
    <string name="str_age_hint">Age: 25</string>
    <string name="str_gender_hint">Gender: Male</string>
    <string name="str_weight_hint">Weight(kg): 70</string>
    <string name="str_height_hint">Height(cm): 183</string>
    <string name="str_age_format">Age: %d</string>
    <string name="str_gender_format">Gender: %s</string>
    <string name="str_weight_format">Weight(kg): %d</string>
    <string name="str_height_format">Height(cm): %d</string>
    <string name="str_forgot_password">Forgot Password</string>
    <string name="str_forgot_password_question">Forgot Password?</string>

    <!--Activity User Profile-->
    <string name="str_update_cap">UPDATE</string>

    <!--Activity Change Password-->
    <string name="str_change_password">Change Password</string>
    <string name="str_old_password_hint">Old Password</string>
    <string name="str_new_password_hint">New Password</string>
    <string name="str_submit_cap">SUBMIT</string>

    <!--Activity Forgot Password-->
    <string name="str_reset_cap">RESET</string>

    <!--Fragment Environment-->
    <string name="str_building_status">Building Status</string>
    <string name="str_air_temp_template">Air Temp\n%.1f ℃</string>
    <string name="str_humidity_template">Humidity\n%.1f %</string>
    <string name="str_uv_level_template">UV Level\n%s</string>
    <string name="str_air_pressure_template">Air Pressure\n%.1f hpa</string>
    <string name="str_heart_rate_template">Heart Rate\n%d bpm</string>
    <string name="str_skin_temp_template">Skin Temp\n%.1f ℃</string>
    <string name="str_distance_template">Distance\n%d m</string>
    <string name="str_calories_template">Calories\n%d kcal</string>
    <string name="str_band_pairing_hint">Connecting to Band…</string>

    <!--Fragment Preferences-->
    <string name="str_build_pref">Building Preferences</string>
    <string name="str_air_temperature">Air Temperatures</string>
    <string name="str_relative_humidity">Relative Humidity</string>
    <string name="str_range_from">Range From</string>
    <string name="str_range_to">Range To</string>
    <string name="str_percentage_format">%d%</string>
    <string name="str_temperature_format">%d℃</string>
    <string-array name="str_array_air_temp">
        <item>18℃</item>
        <item>19℃</item>
        <item>20℃</item>
        <item>21℃</item>
        <item>22℃</item>
        <item>23℃</item>
        <item>24℃</item>
        <item>25℃</item>
        <item>26℃</item>
        <item>27℃</item>
        <item>28℃</item>
        <item>29℃</item>
        <item>30℃</item>
        <item>31℃</item>
        <item>32℃</item>
        <item>33℃</item>
        <item>34℃</item>
        <item>35℃</item>
    </string-array>
    <string-array name="str_array_humidity">
        <item>20%</item>
        <item>30%</item>
        <item>40%</item>
        <item>50%</item>
        <item>60%</item>
        <item>70%</item>
        <item>80%</item>
        <item>90%</item>
    </string-array>
    <string-array name="str_array_hotness">
        <item>Hot</item>
        <item>Warm</item>
        <item>Slightly Warm</item>
        <item>Comfortable</item>
    </string-array>
    <string-array name="str_array_coldness">
        <item>Comfortable</item>
        <item>Slightly Cool</item>
        <item>Cool</item>
        <item>Cold</item>
    </string-array>

    <!--Fragment Me-->
    <string-array name="str_array_clothing">
        <item>Short Sleeve Shirt &amp; Short Trousers</item>
        <item>Short Sleeve Shirt &amp; Long Trousers</item>
        <item>Long Sleeve Shirt &amp; Short Trousers</item>
        <item>Long Sleeve Shirt &amp; Long Trousers</item>
        <item>Outer Garment &amp; Short Trousers</item>
        <item>Outer Garment &amp; Long Trousers</item>
    </string-array>

    <string-array name="str_array_feedback">
        <item>Hot</item>
        <item>Warm</item>
        <item>Slightly Warm</item>
        <item>Comfortable</item>
        <item>Slightly Cool</item>
        <item>Cool</item>
        <item>Cold</item>
    </string-array>

    <!--Settings Activity-->
    <string name="str_title_band_connection">Wristband</string>
    <string name="str_title_bluetooth">BlueTooth</string>
    <string name="str_title_settings">Settings</string>
    <string name="str_title_device">Device</string>
    <string name="str_title_general">General</string>
    <string name="str_title_languages">Languages</string>
    <string name="str_title_notifications">Notifications</string>
    <string name="str_title_check_update">Check Updates</string>
    <string name="str_title_terms">Terms &#38; Conditions</string>
    <string name="str_title_about_us">About Us</string>
    <string name="str_title_help">Help</string>
</resources>
