<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ntucap.itcm.activities.LoginActivity">
    <ImageView
        android:id="@+id/iv_back_arrow_act_login"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_back_arrow_theme"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_back_arrow_act_login"
        android:layout_marginTop="48dp"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/ic_logo_theme_48"/>
        <LinearLayout
            android:id="@+id/ll_input"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:orientation="vertical">
            <EditText
                android:id="@+id/et_email_input_act_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textSize="14sp"
                android:maxLines="1"
                android:hint="@string/str_email_hint"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="4dp"
                android:src="@color/mainTheme"
                android:scaleType="fitXY"/>
            <EditText
                android:id="@+id/et_pw_input_act_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:inputType="textPassword"
                android:textSize="14sp"
                android:maxLines="1"
                android:hint="@string/str_password_hint"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="4dp"
                android:src="@color/mainTheme"
                android:scaleType="fitXY"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="@color/mainTheme"
                android:textStyle="bold"
                android:gravity="end"
                android:text="@string/str_forgot_password"/>
        </LinearLayout>
        <TextView
            android:id="@+id/tv_login_act_login"
            android:layout_width="256dp"
            android:layout_height="36dp"
            android:layout_marginTop="24dp"
            android:text="@string/str_login_cap"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:gravity="center"
            android:enabled="false"
            android:background="@drawable/selector_roundedrect_solid_transtheme_20dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_signup_act_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="8dp"
        android:text="@string/str_sign_up_cap"
        android:textStyle="bold"
        android:textColor="@color/mainTheme"/>
</RelativeLayout>
