<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ntucap.itcm.activities.RegisterActivity">

    <ImageView
        android:id="@+id/iv_back_arrow_act_register"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_back_arrow_theme"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"/>
    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginTop="60dp"
        android:src="@drawable/ic_logo_theme_48"
        android:layout_below="@id/iv_back_arrow_act_register"
        android:layout_centerHorizontal="true"/>
    <LinearLayout
        android:id="@+id/ll_input"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:orientation="vertical">
        <EditText
            android:id="@+id/et_email_input_act_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textSize="16sp"
            android:hint="@string/str_email_hint"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="4dp"
            android:src="@color/mainTheme"
            android:scaleType="fitXY"/>
        <EditText
            android:id="@+id/et_pw_input_act_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textSize="16sp"
            android:hint="@string/str_password_hint"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="4dp"
            android:src="@color/mainTheme"
            android:scaleType="fitXY"/>
        <EditText
            android:id="@+id/et_pw_confirm_input_act_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textSize="16sp"
            android:hint="@string/str_confirm_password_hint"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="4dp"
            android:src="@color/mainTheme"
            android:scaleType="fitXY"/>
        <EditText
            android:id="@+id/et_firstname_input_act_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:maxLines="1"
            android:textSize="16sp"
            android:hint="@string/str_firstname_hint"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="4dp"
            android:src="@color/mainTheme"
            android:scaleType="fitXY"/>
        <EditText
            android:id="@+id/et_lastname_input_act_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:maxLines="1"
            android:textSize="16sp"
            android:hint="@string/str_lastname_hint"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="4dp"
            android:src="@color/mainTheme"
            android:scaleType="fitXY"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="16dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/et_age_input_act_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:hint="@string/str_age_hint"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="4dp"
                    android:src="@color/mainTheme"
                    android:scaleType="fitXY"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/et_gender_input_act_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:hint="@string/str_gender_hint"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="4dp"
                    android:src="@color/mainTheme"
                    android:scaleType="fitXY"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:id="@+id/tv_signup_confirm_act_register"
        android:layout_width="256dp"
        android:layout_height="36dp"
        android:layout_below="@+id/ll_input"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/str_sign_up_cap"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:gravity="center"
        android:enabled="false"
        android:background="@drawable/selector_roundedrect_solid_transtheme_20dp"/>
    <ImageView
        android:id="@+id/iv_mask_act_register"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@color/trans_50"
        android:alpha="0.0"/>
    <com.dpizarro.uipicker.library.picker.PickerUI
        android:id="@+id/picker_ui_act_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:backgroundColor="@color/white"
        app:linesCenterColor="@color/mainTheme"
        app:autoDismiss="false"
        app:itemsClickables="true"
        app:textCenterColor="@color/textGray"
        app:textNoCenterColor="@color/textLightGray"/>
</RelativeLayout>
