<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainTheme">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_logo_white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/str_logo_title"
            android:textStyle="bold"
            android:textSize="24sp"
            android:textColor="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_btns_act_entrance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="96dp"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/tv_signup_act_entrance"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:text="@string/str_sign_up_cap"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:gravity="center"
            android:background="@drawable/selector_roundedrect_border_white_20dp"/>

        <TextView
            android:id="@+id/tv_login_act_entrance"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:text="@string/str_login_cap"
            android:textColor="@color/mainTheme"
            android:textStyle="bold"
            android:gravity="center"
            android:background="@drawable/selector_roundedrect_solid_white_20dp"/>
    </LinearLayout>
</RelativeLayout>