<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ntucap.itcm.activities.LoginActivity">
    <RelativeLayout
        android:id="@+id/rl_actionbar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:background="@color/white"
        android:paddingLeft="4dp"
        android:paddingRight="12dp"
        android:elevation="6dp">

        <TextView
            android:id="@+id/tv_title_act_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/textGray"
            android:text="@string/str_change_password"
            android:textSize="16sp"/>

        <ImageView
            android:id="@+id/iv_nav_act_change_pw"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_back_arrow_black"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_actionbar"
        android:layout_marginTop="48dp"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/ic_logo_theme_48"/>
        <LinearLayout
            android:id="@+id/ll_input"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:orientation="vertical">
            <EditText
                android:id="@+id/et_old_pw_input_act_change_pw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textSize="14sp"
                android:maxLines="1"
                android:hint="@string/str_old_password_hint"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="4dp"
                android:src="@color/mainTheme"
                android:scaleType="fitXY"/>
            <EditText
                android:id="@+id/et_new_pw_input_act_change_pw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:inputType="textPassword"
                android:textSize="14sp"
                android:maxLines="1"
                android:hint="@string/str_new_password_hint"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="4dp"
                android:src="@color/mainTheme"
                android:scaleType="fitXY"/>
            <EditText
                android:id="@+id/et_new_pw_confirm_input_act_change_pw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:inputType="textPassword"
                android:textSize="14sp"
                android:maxLines="1"
                android:hint="@string/str_confirm_password_hint"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="4dp"
                android:src="@color/mainTheme"
                android:scaleType="fitXY"/>
        </LinearLayout>
        <TextView
            android:id="@+id/tv_submit_act_change_pw"
            android:layout_width="256dp"
            android:layout_height="36dp"
            android:layout_marginTop="24dp"
            android:text="@string/str_submit_cap"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:gravity="center"
            android:enabled="false"
            android:background="@drawable/selector_roundedrect_solid_transtheme_20dp"/>
    </LinearLayout>
</RelativeLayout>
